--- a/allocation_algorithm_example.ipynb
+++ b/allocation_algorithm_example.ipynb
@@ -238,15 +238,6 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "valuation_profile = np.array([[18, 6, 19, 15, 14, 20], [18, 19, 1, 8, 10, 2], [7, 19, 10, 2, 20, 5]])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -263,7 +254,7 @@
     "n = 3\n",
     "m = 6\n",
     "valuation_range = np.array([1, 21])\n",
-    "# valuation_profile = randint_valuation(n, m, valuation_range)\n",
+    "valuation_profile = randint_valuation(n, m, valuation_range)\n",
     "\n",
     "print(f\"Valuation Profile:\\n{valuation_profile}\")"
    ]
@@ -491,27 +482,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7\n"
-     ]
-    }
-   ],
-   "source": [
-    "array = np.array([1.875, 1.7, np.inf])\n",
-    "\n",
-    "print(np.min(array))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.875 1.7 inf\n",
-      "1.7\n",
       "Barman allocation: \n",
       " [[0 1 0 0 1 0]\n",
       " [1 0 0 1 0 0]\n",
