--- a/checker_example.ipynb
+++ b/checker_example.ipynb
@@ -194,7 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Is resource monotonicity: False\n",
+      "Is resource monotonicity: True\n",
       "\n",
       "Current allocation: \n",
       "[[0 0 0 0 1 0]\n",
@@ -202,7 +202,7 @@
       " [0 1 0 1 0 0]\n",
       " [1 0 0 0 0 1]]\n",
       "\n",
-      "Is resource monotonicity: False\n",
+      "Is resource monotonicity: True\n",
       "\n"
      ]
     }
