--- a/allocation_algorithm_example.ipynb
+++ b/allocation_algorithm_example.ipynb
@@ -831,7 +831,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "thesis",
+   "display_name": "indiv-all",
    "language": "python",
    "name": "python3"
   },
@@ -845,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
